--- a/index.html
+++ b/index.html
@@ -3,9 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Gerador de Pets</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    
+    <div class="conteiner">
+        <h1>Gerador de pets</h1>
+        <div class="buttons">
+            <button id="dogBtn" >Buscar cachorro</button>
+            <button id="catBtn" >Buscar gatinho</button>
+        </div>
+        <div class="imagem">
+            <img id="petImg" src="" alt="imagem do pet">
+    </div>
+
+        <script src="script.js"></script>
 </body>
 </html>
